# work-log

./: Makefile  functional_tests.py  manage.py  pyproject.toml
functional_tests/: tests.py
work_log/: asgi.py  settings.py  urls.py  wsgi.py
work_log/journal/: apps.py  models.py  tests.py  urls.py  views.py
work_log/journal/migrations/: 0001_initial.py  0002_item_text.py  0003_list.py  0004_item_list.py  0005_alter_item_list.py
work_log/templates/: home.html  index.html  list.html  main.html
