[tool.poetry]
name = "work-log"
version = "0.1.0"
description = ""
authors = ["Aleksandr <nastyavin86@br.ru>"]
readme = "README.md"
packages = [{include = "work_log"}]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.1.3"
selenium = "^4.6.0"
python-dotenv = "^0.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
